--- a/package.json
+++ b/package.json
@@ -9,9 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.19",
+    "framer-motion": "^11.2.10",
+    "gh-pages": "^6.1.1",
+    "next": "14.2.3",
+    "nodemailer": "^6.9.13",
+    "postcss": "^8.4.38",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-icons": "^5.2.1",
+    "react-simple-typewriter": "^5.0.1",
+    "sharp": "^0.33.4",
+    "tailwindcss": "^3.4.4"
   },
   "devDependencies": {
     "eslint": "^8",
